CSS; Loggedin user saves to localstorage; Cleaning

--- a/src/todo
+++ b/src/todo
@@ -1,8 +1,8 @@
 
-// CSS of login/signup
 // Themes
 // Home screen widgets
-    // 
-    // 
-    // 
+    // Local weather
+    // Top 3 news articles
+    // Top 3 to do list items
+    // Top 5 songs Israel/USA
 // Change login email to "type email"
