Added socials @nvbr; Added calendar page @nvbr;

--- a/src/todo
+++ b/src/todo
@@ -1,5 +1,8 @@
 
-// Themes
+// Add social media links (to nav bar)
+// Dark/light themes
+// Google Calendar API
+    // Add upcoming events from calendar to home screen
 // Home screen widgets
     // Local weather
     // Top 3 news articles
