--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
-
-// Add a user to the database
+// Signup
     + On submit signup form, take the data and save as an object
     + Take newUser object and send to server
     + Connect server to Mongodb
@@ -7,12 +6,11 @@
     + Check to make sure that the user's email is unique (no existing users with that email)
     + Encryption of password (and sending the encrypted password to the database)
     + Clean code and commit
-
     + How to catch Axios Uncaught Exceptions that don't get caught in Client/Login:102
     + Catch all Axios errors
     + Server/authController:18
 
-// .ENV (only on server)
+// .ENV
     + Create an .env file
     + Add the .env to .gitignore
     + Move the keys from their original files to the .env
@@ -28,25 +26,31 @@
         + News API keys
         + Mongodb url (on server side)
 
-// Login of a user
-    - Receive inputs from the user (frontend)
-    - Send the inputs to the server (frontend -> backend)
-    - Check the database for the given email (backend)
-    - Check to see if the password entered matches the encrypted password
-    - Deal with errors of incorrect password, unknown email, etc.
-    - Tokens after signing in - JWT
-    - Update 'Logged in' statuses where needed (localStorage)
+// Login
+    + Receive inputs from the user (frontend)
+    + Send the inputs to the server (frontend -> backend)
+    + Check the database for the given email (backend)
+    + Check to see if the password entered matches the encrypted password
+    + Token after signing in - JWT
+    + Deal with errors of incorrect password, unknown email, etc.
+    + Update 'Logged in' statuses where needed (localStorage)
+    + Log out function - delete from localStorage and wherever needed (server?)
+    + Move the secret key for JWT to the .env file
+
+// Weather
+    - Make widget style boxes
+    - 
 
 // News
     - Make a TDL-style subject list in myHub for news topics
     -
     -
 
-// Google Calendar API
+// Calendar
     // Add upcoming events from calendar to home screen
 
-// Home screen widgets
+// Home
     // Top 3 to do list items
     // Top 5 songs Israel/USA
 
-// Change login form email to "type email"
+// Change login and submit forms email to "type email"
